--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "if-env": "^1.0.4",
-    "mongoose": "^5.3.0"
+    "mongoose": "^5.3.0",
+    "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.5.2"
   }
 }
