--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
