--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.0",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
